play function addded

--- a/Music_generation.ipynb
+++ b/Music_generation.ipynb
@@ -71,6 +71,7 @@
     "import tensorflow as tf \n",
     "tf.enable_eager_execution()\n",
     "\n",
+    "%load util.py\n",
     "import numpy as np\n",
     "import os\n",
     "import time\n",
@@ -1158,6 +1159,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.play_generated_song(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {
     "colab": {
@@ -1230,6 +1240,13 @@
    "source": [
     "print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
